api and mongodb communication refactoring